--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "angularfire2": "^5.4.2",
+    "firebase": "^8.3.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
